Fix inactive scroll frames sometimes creating very large, incorrect hit regions. (bug 1190112, r=tn)